Fix the problem of too much zooming in of background images on mobkile. Attempt # 2.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -227,11 +227,11 @@ header {
 /****** Media queries *******/
 @media screen and (max-width: 768px) {
   #portfolio-div {
-    position: fixed;
+    background-position: center center;
   }
 
   #about-div {
-    position: fixed;
+    background-position: center center;
   }
 }
 
